--- a/index.html
+++ b/index.html
@@ -1,2 +1,65 @@
-<title>GitHub Pages - Ejemplos de uso</title>
-<h1>Hello Wold!!</h1>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="robots" content="index,follow"/>
+	<meta name="language" content="en"/>
+	<meta name="distribution" content="global"/>
+	<meta name="rating" content="general"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="copyright" content="Bitcoin Nova"/>
+	<link href="assert/css/bootstrap.css" rel="stylesheet" type="text/css">
+	<link href="assert/css/style.css" rel="stylesheet" type="text/css">
+	<link rel="shortcut icon" href="assert/img/icon/favicon.ico" type="image/x-icon"/>
+	<link rel="apple-touch-icon" href="assert/img/icon/apple-touch-icon.png"/>
+	<link rel="apple-touch-icon" sizes="57x57" href="assert/img/icon/apple-touch-icon-57x57.png"/>
+	<link rel="apple-touch-icon" sizes="72x72" href="assert/img/icon/apple-touch-icon-72x72.png"/>
+	<link rel="apple-touch-icon" sizes="76x76" href="assert/img/icon/apple-touch-icon-76x76.png"/>
+	<link rel="apple-touch-icon" sizes="114x114" href="assert/img/icon/apple-touch-icon-114x114.png"/>
+	<link rel="apple-touch-icon" sizes="120x120" href="assert/img/icon/apple-touch-icon-120x120.png"/>
+	<link rel="apple-touch-icon" sizes="144x144" href="assert/img/icon/apple-touch-icon-144x144.png"/>
+	<link rel="apple-touch-icon" sizes="152x152" href="assert/img/icon/apple-touch-icon-152x152.png"/>
+	<link rel="apple-touch-icon" sizes="180x180" href="assert/img/icon/apple-touch-icon-180x180.png"/>
+	<script src="assert/js/jquery-3.3.1.slim.js"></script>
+	<script src="assert/js/bootstrap.js"></script>
+	<script src="assert/js/popper.js"></script>
+	<title>Bitcoin Nova | Your Money Anonymous, Safe, Impossible To Track and Fast Transaction.</title>
+</head>
+<body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  		<a class="navbar-brand"><img class="header-logo" src="assert/img/logo/logo.png" alt="BitcoinNova"></a>
+  			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    		<span class="navbar-toggler-icon"></span>
+  			</button>
+  			<div class="collapse navbar-collapse" id="navbarText">
+			<ul class="navbar-nav ml-auto">
+			  <li class="nav-item active">
+				<a class="nav-link" href="#">Home</a>
+			  </li>
+				<li class="nav-item">
+				<a class="nav-link" href="#">Get Started</a>
+			  </li>
+				<li class="nav-item">
+				<a class="nav-link" href="#">Download</a>
+			  </li>
+				<li class="nav-item">
+				<a class="nav-link" href="#">Ecosystem</a>
+			  </li>
+				<li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Resources</a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">...</a>
+          <a class="dropdown-item" href="#">...</a>
+          <a class="dropdown-item" href="#">...</a>
+        </div>
+      	</li>
+			</ul>
+			<form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><b>Search</b></button>
+    	</form>
+		  </div>
+	</nav>
+</body>
+</html>
